agregue otra linea de comentario

--- a/indexfjeanmaire.html
+++ b/indexfjeanmaire.html
@@ -9,7 +9,8 @@
 <body>
 
   
-<!--La etiqueta nav, probando git, haciendo 2do commit, haciendo 3er commit-->
+<!--La etiqueta nav, probando git, haciendo 2do commit-->
+<!--agrego otro comentario-->
 
 
     <h1>ETIQUETA SEMANTICA NAV</h1>
